# repo-app-yh

./: .dockerignore  .gitignore  ANALYSIS_FONT_SIZE_ISSUE.md  ANALYSIS_INSTAGRAM_FEED_PIPELINE_INTEGRATION.md  ANALYSIS_JOB_IOU_EVAL_NOT_DONE.md  ANALYSIS_JOB_RUNNING_VARIANTS_RECOVERY.md  ANALYSIS_JOB_VARIANTS_PIPELINE.md  ANALYSIS_LLAVA_FONT_RECOMMENDATION.md  ANALYSIS_LLAVA_STAGE2_QUALITY_ASSESSMENT.md  ANALYSIS_LLAVA_STAGE2_VERIFICATION.md  ANALYSIS_OVERLAY_ISSUES.md  ANALYSIS_POST_OVERLAY_EVALUATION.md  DOCS_BACKGROUND_EXECUTION.md  DOCS_BACKGROUND_MONITOR.md  DOCS_INSTAGRAM_FEED.md  DOCS_INSTAGRAM_FEED_DB.md  DOCS_JOB_STATE_LISTENER.md  DOCS_JS_PART_IMPLEMENTATION.md  DOCS_PIPELINE_COMPLETE.md  DOCS_PIPELINE_COMPLETE_FLOW.md  DOCS_SWAP_AREA_SETUP.md  DOCS_YE_PART_PIPELINE_TEST.md  Dockerfile  IMPLEMENTATION_ORDER_YH.md  IMPLEMENTATION_PLAN_LISTEN_NOTIFY.md  README.md  config.py  database.py  docker-compose.yml  download_model.py  download_yolo_model.py  fonts.py  main.py  middleware.py  models.py  pyproject.toml  requirements.txt  utils.py
docs/: 01_schema.sql  ASSETS_STRUCTURE copy.md  BRANCH_STRATEGY.md  KOREAN_FONT_SETUP.md  LLAVA_CONSISTENCY_ANALYSIS.md  LLAVA_IMPROVEMENT_ANALYSIS.md  LLAVA_RESULT_ANALYSIS_FINAL.md  LLAVA_SETUP.md  LLAVA_TEST_RESULT_ANALYSIS.md  PORT_MAPPING copy.md  QUANTIZATION_SETUP.md
pipeline_test/: README.md  pipline_test_txt1.txt
presentation/: 00_PROJECT_OVERVIEW.md  01_AUTOMATION_TRIGGER_SYSTEM.md  02-1_LLAVA_INTEGRATION.md  02-2_YOLO_INTEGRATION.md  02-3_GPT_INTEGRATION.md  02_AI_MODEL_INTEGRATION.md  03_IMAGE_PROCESSING_OVERLAY.md  (+6 more)
(+84 files in other folders)
