[project]
name = "feedlyai-work"
version = "0.1.0"
description = "YH's part of FeedlyAI - YOLO/Planner/Overlay/Eval/Judge"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.9",
    "pydantic==2.7.4",
    "Pillow==10.3.0",
    "requests==2.32.3",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "prometheus-client==0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

